k8s/deployment-quay-io.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-greetings2
  namespace: myapps1
spec:
  selector:
    matchLabels: 
      app: simple-greetings2
  template:
    metadata:
      labels: 
        app: simple-greetings2
    spec:
      #serviceAccountName: custom-sa
      imagePullSecrets:
      - name: mini-quay-secret
      containers:
      - name: simple-greetings2
        image: quay.io/alitestseverything/simple-greetings:1.0.0 # anahidtapregistry.azurecr.io/simple-greetings:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
