k8s/deployment.no.resourcelimit.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-greetings
spec:
  selector:
    matchLabels: 
      app: simple-greetings
  template:
    metadata:
      labels: 
        app: simple-greetings
    spec:
      serviceAccountName: custom-sa
      containers:
      - name: simple-greetings
        image: docker.io/accordingtoali/simple-greetings:latest # anahidtapregistry.azurecr.io/simple-greetings:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: simple-greetings
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector: 
    app: simple-greetings
  type: LoadBalancer
